# YingGe

./: .gitignore  CLA.md  LICENSE  README.md  README.zh.md  TESTING.md  index.html  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ai/: config.rs  embedding.rs  mod.rs  provider.rs  tagging.rs
src-tauri/src/commands/: ai.rs  asset.rs  library.rs  menu.rs  mod.rs  processing.rs  search.rs  tag.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/plugin_system/: manifest.rs  mod.rs
src-tauri/src/processing/: background.rs  compress.rs  descriptor.rs  mod.rs  spritesheet.rs
src-tauri/src/storage/: file_ops.rs  mod.rs  thumbnail.rs
src/components/asset/: AssetCard.tsx  AssetDetail.tsx  AssetGrid.tsx  AssetImport.tsx  DropZone.tsx
src/components/common/: AiConfigHintDialog.tsx  ContextMenu.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/processing/: CompressDialog.tsx  ToolsPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/tag/: TagManager.tsx
src/hooks/: useAssets.ts  useLibrary.ts  useSearch.ts  useTags.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
src/services/: tauriBridge.ts
src/stores/: appStore.ts
src/types/: asset.ts
