[package]
name = "yingge"
version = "0.1.0"
description = "YingGe - Game Asset Management Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "yingge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = "0.25"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
thiserror = "2"
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
